[gd_scene load_steps=3 format=3 uid="uid://b11wl1b6c4xqt"]

[ext_resource type="Script" uid="uid://b0k0l2odjwcit" path="res://actors/bullet/bullet.gd" id="1_8mjoc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tihky"]
size = Vector2(16, 16)

[node name="Bullet" type="Area2D" groups=["bullet"]]
script = ExtResource("1_8mjoc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tihky")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(0.862745, 0.0784314, 0.235294, 1)

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_area_shape_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
